z-index fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -124,6 +124,10 @@
 
 }
 
+app-root {
+  z-index: 5 !important;
+}
+
 body {
   height: 100vh;
   font-family: "Inter", sans-serif;
